--- a/client/src/Menu/menu.css
+++ b/client/src/Menu/menu.css
@@ -57,7 +57,7 @@
 
 .menu_header {
     /*font-size: 2rem;*/
-    /*font: small-caps 24px/1 sans-serif;*/
+    font: small-caps 24px/1 sans-serif;
     font-size: 2.4rem;
     /* color: black;
     color: black;
@@ -126,14 +126,12 @@ a {
 
 
 .AppLogo {
+    background-color: whitesmoke;
+    border-radius: 20px;
     right: 1%;
-    /*display: flex;*/
-    /*position: fixed;*/
-    width: 10%;
+    width: 12%;
     margin-right: 45px;
     margin-left: 10px;
-    /*background-color: white;*/
-
 }
 
 ul li a {
